# ingredients.tasks

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ingredients_tasks/: celary.py  omapi.py  vmware.py
ingredients_tasks/conf/: default_settings.py  loader.py
ingredients_tasks/tasks/: image.py  instance.py  network.py  region.py  tasks.py  zone.py
