[metadata]
name = ingredients.tasks
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = Task Library for Sandwich Cloud
description-file = README.rst
home-page = https://github.com/sandwichcloud/ingredients.tasks
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    ingredients_tasks

[pbr]
skip_authors = 1
skip_changelog = 1